--- a/css/index.css
+++ b/css/index.css
@@ -134,6 +134,13 @@ table {
   font-family: 'Cabin', sans-serif;
   padding: 0.75% 0 0.75%;
 }
+@media (max-width: 600px) {
+  .header-navigation {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
 .header-navigation .header {
   display: flex;
   align-items: center;
@@ -168,12 +175,6 @@ table {
   font-size: 16px;
   height: 26px;
   width: 150px;
-}
-@media (max-width: 500px) {
-  .header-navigation .search-bar button {
-    width: 50%;
-    font-size: 10px;
-  }
 }
 .header-navigation .search-bar button a {
   text-decoration: none;
