--- a/less/navigation.less
+++ b/less/navigation.less
@@ -6,6 +6,12 @@
     font-family: @font-cabin;
     padding: .75% 0 .75%;
 
+    @media @break {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
     .header {
         display: flex;
         align-items: center;
@@ -44,10 +50,10 @@
             height: 26px;
             width: 150px;
 
-            @media @phone {
-                width: 50%;
-                font-size: 10px;
-            }
+            // @media @phone {
+            //     width: 50%;
+            //     font-size: 10px;
+            // }
             
         }
 
