--- a/css/index.css
+++ b/css/index.css
@@ -569,6 +569,7 @@ a.url {
   width: 40%;
   position: absolute;
   margin: 20px 0 0 20px;
+  border-radius: 5px;
 }
 .container.about .developer .devInfo {
   width: 100%;
