--- a/less/home-page.less
+++ b/less/home-page.less
@@ -362,6 +362,7 @@ a.url {
                 width: 40%;
                 position: absolute;  
                 margin: 20px 0 0 20px;
+                border-radius: 5px;
             }
         }
         .devInfo {
